refactor: refactor index in two components

--- a/views/admin/cathegories/new.ejs
+++ b/views/admin/cathegories/new.ejs
@@ -1,1 +1,5 @@
-<h1>Bem vindo a rota New Cathegory</h1>
+<%- include('../../components/head.ejs'); %>
+<body>
+  <h1>Bem vindo a rota New Cathegory</h1>
+</body>
+<%- include('../../components/tail.ejs'); %>
