--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <!-- Device meta tags -->
-  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- SEO meta tags -->
-  <meta name="author" content="Gabriel Santos Cardoso">
-  <meta name="description" content="">
-  <!-- Imports and libs -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/css/index.css">
-  <!-- Title -->
-  <title>Blog NodeJS</title>
-</head>
+<%- include('components/head.ejs'); %>
 <body>
   <noscript>Por favor, habilite a execução de Javascript no seu navegardor!</noscript>
   <header>
@@ -33,4 +17,4 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="/javascript/index.js"></script>
 </body>
-</html>
+<%- include('components/tail.ejs'); %>
