refactor: refactor components tail and head to made the correct imports

--- a/views/admin/cathegories/new.ejs
+++ b/views/admin/cathegories/new.ejs
@@ -1,5 +1,5 @@
 <%- include('../../components/head.ejs'); %>
-<body>
+  <%- include('../../components/header.ejs'); %> 
   <h1>Bem vindo a rota New Cathegory</h1>
-</body>
+  <%- include('../../components/footer.ejs'); %> 
 <%- include('../../components/tail.ejs'); %>
