--- a/views/components/head.ejs
+++ b/views/components/head.ejs
@@ -15,3 +15,5 @@
   <!-- Title -->
   <title>Blog NodeJS</title>
 </head>
+<body>
+  <noscript>Por favor, habilite a execução de Javascript no seu navegardor!</noscript>
