--- a/views/admin/cathegories/new.ejs
+++ b/views/admin/cathegories/new.ejs
@@ -1,5 +1,26 @@
 <%- include('../../components/head.ejs'); %>
-  <%- include('../../components/header.ejs'); %> 
-  <h1>Bem vindo a rota New Cathegory</h1>
-  <%- include('../../components/footer.ejs'); %> 
+  <header class="fixed-top">
+    <%- include('../../components/header.ejs'); %> 
+  </header>
+  <main class="cathegory-register h-100 d-flex justify-content-center align-items-center">
+    <div class="container col-md-6">
+      <div class="card">
+        <div class="card-header">
+          <h1>Cadastro de Categoria</h1>
+        </div>
+        <div class="card-body">
+          <div class="form-group">
+            <label for="cathegoryNameRegister">Insira o nome da categoria: </label>
+            <input type="text"
+              class="form-control" name="cathegoryNameRegister" id="cathegoryNameRegister" aria-describedby="helpId" placeholder="Nome da categoria">
+            <small id="helpId" class="form-text text-muted">Não utilize espaços</small>
+          </div>
+          <button type="submit" class="btn btn-success">Cadastrar categoria</button>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer class="fixed-bottom d-flex justify-content-end p-2">
+    <%- include('../../components/footer.ejs'); %> 
+  </footer>
 <%- include('../../components/tail.ejs'); %>
