--- a/views/admin/cathegories/new.ejs
+++ b/views/admin/cathegories/new.ejs
@@ -9,13 +9,15 @@
           <h1>Cadastro de Categoria</h1>
         </div>
         <div class="card-body">
-          <div class="form-group">
-            <label for="cathegoryNameRegister">Insira o nome da categoria: </label>
-            <input type="text"
-              class="form-control" name="cathegoryNameRegister" id="cathegoryNameRegister" aria-describedby="helpId" placeholder="Nome da categoria">
-            <small id="helpId" class="form-text text-muted">Não utilize espaços</small>
-          </div>
-          <button type="submit" class="btn btn-success">Cadastrar categoria</button>
+          <form action="/categorias/salvar" method="post">
+            <div class="form-group">
+              <label for="cathegoryNameRegister">Insira o nome da categoria: </label>
+              <input type="text"
+                class="form-control" name="cathegoryNameRegister" id="cathegoryNameRegister" aria-describedby="helpId" placeholder="Nome da categoria">
+              <small id="helpId" class="form-text text-muted">Utilize um nome indexável</small>
+            </div>
+            <button type="submit" class="btn btn-success">Cadastrar categoria</button>
+          </form>
         </div>
       </div>
     </div>
