feat: destruct header component in header and header admin components

--- a/views/admin/cathegories/index.ejs
+++ b/views/admin/cathegories/index.ejs
@@ -1,6 +1,6 @@
 <%- include('../../components/head.ejs'); %>
   <header class="fixed-top">
-    <%- include('../../components/header.ejs') %> 
+    <%- include('../components/header-admin.ejs') %> 
   </header>
   <main class="cathegories h-100 d-flex justify-content-center align-items-center">
     <div class="cathegories-listing container h-75 col-md-8">
