--- a/views/admin/components/header-admin.ejs
+++ b/views/admin/components/header-admin.ejs
@@ -9,23 +9,17 @@
       <li class="nav-item active">
         <a class="nav-link" href="/"><i class="fa fa-home" aria-hidden="true"></i>Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/contato">Contato</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/sobre">Sobre</a>
-      </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Acesse</a>
+        <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-cog" aria-hidden="true"></i> Gestão</a>
         <div class="dropdown-menu" aria-labelledby="dropdownId">
-          <a class="dropdown-item" href="/artigos">Artigos</a>
-          <a class="dropdown-item" href="/categorias">Categorias</a>
+          <a class="dropdown-item" href="/admin/artigos">Artigos</a>
+          <a class="dropdown-item" href="/admin/categorias">Categorias</a>
         </div>
       </li>
     </ul>
     <div class="div-inline my-2 my-lg-0">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
-      <button class="btn btn-success my-2 my-sm-0" type="submit">Cadastrar</button>
+      <span class="my-2 my-sm-0">Logado como <span class="badge badge-secondary">Admin</span></span>
+      <button class="btn btn-outline-danger my-2 my-sm-0" type="submit"><i class="fa fa-sign-out" aria-hidden="true"></i>Sair</button>
     </div>
   </div>
 </nav>
