feat: enhance components index, footer and header
refact: footer and header components
enhance: index and index cathegories views
BREAKING CHANGES: index view may contains some rendering issues

--- a/views/admin/cathegories/index.ejs
+++ b/views/admin/cathegories/index.ejs
@@ -36,7 +36,7 @@
       </table>
     </div>
   </main>
-  <footer class="fixed-bottom d-flex justify-content-end p-2">
+  <footer class="fixed-bottom">
     <%- include('../../components/footer.ejs') %> 
   </footer>
 <%- include('../../components/tail.ejs'); %>
