--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -1,1 +1,3 @@
-<span>Desenvolvido por Gabriel Santos Cardoso</span>
+<div class="footer d-flex justify-content-end p-2 bg-light shadow">
+  <span>Desenvolvido com <i class="fa fa-heart text-danger" aria-hidden="true"></i> por Gabriel Santos Cardoso</span>
+</div>
