--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
 <%- include('components/head.ejs'); %>
-  <header>
+  <header class="fixed-top">
     <%- include('components/header.ejs') %> 
   </header>
-  <main>
+  <main class=" h-100 d-flex justify-content-center align-items-center">
     <%- include('components/home.ejs') %> 
   </main>
-  <footer>
+  <footer class="fixed-bottom">
     <%- include('components/footer.ejs') %> 
   </footer>
 <%- include('components/tail.ejs'); %>
