--- a/views/admin/cathegories/new.ejs
+++ b/views/admin/cathegories/new.ejs
@@ -1,6 +1,6 @@
 <%- include('../../components/head.ejs'); %>
   <header class="fixed-top">
-    <%- include('../../components/header.ejs'); %> 
+    <%- include('../components/header-admin.ejs'); %> 
   </header>
   <main class="cathegory-register h-100 d-flex justify-content-center align-items-center">
     <div class="container col-md-6">
@@ -9,7 +9,7 @@
           <h1>Cadastro de Categoria</h1>
         </div>
         <div class="card-body">
-          <form action="/categorias/salvar" method="post">
+          <form action="/admin/categorias/salvar" method="post">
             <div class="form-group">
               <label for="cathegoryNameRegister">Insira o nome da categoria: </label>
               <input type="text"
@@ -22,7 +22,7 @@
       </div>
     </div>
   </main>
-  <footer class="fixed-bottom d-flex justify-content-end p-2">
+  <footer class="fixed-bottom">
     <%- include('../../components/footer.ejs'); %> 
   </footer>
 <%- include('../../components/tail.ejs'); %>
