--- a/views/admin/categories/edit.ejs
+++ b/views/admin/categories/edit.ejs
@@ -2,7 +2,7 @@
 <header class="fixed-top">
   <%- include('../components/header-admin.ejs'); %> 
 </header>
-<main class="cathegory-register h-100 d-flex justify-content-center align-items-center">
+<main class="category-register h-100 d-flex justify-content-center align-items-center">
   <div class="container col-md-6">
     <div class="card">
       <div class="card-header">
@@ -11,11 +11,11 @@
       <div class="card-body">
         <form action="/admin/categorias/atualizar" method="post">
           <div class="form-group">
-            <label for="cathegoryUpdatedName">Atualizar o nome da categoria: </label>
-            <input type="hidden" name="cathegoryId" value="<%= cathegory.id %>">
+            <label for="categoryUpdatedName">Atualizar o nome da categoria: </label>
+            <input type="hidden" name="categoryId" value="<%= category.id %>">
             <input type="text"
-            class="form-control" name="cathegoryUpdatedName" id="cathegoryUpdatedName" aria-describedby="helpId" placeholder="Novo nome">
-            <small id="helpId" class="form-text text-muted">Nome atual: <strong><%= cathegory.title %></strong></small>
+            class="form-control" name="categoryUpdatedName" id="categoryUpdatedName" aria-describedby="helpId" placeholder="Novo nome">
+            <small id="helpId" class="form-text text-muted">Nome atual: <strong><%= category.title %></strong></small>
           </div>
           <button type="submit" class="btn btn-success">Atualizar categoria</button>
         </form>
