feat: add article view and form

--- a/views/admin/categories/index.ejs
+++ b/views/admin/categories/index.ejs
@@ -3,7 +3,7 @@
     <%- include('../components/header-admin.ejs') %> 
   </header>
   <main class="categories h-100 d-flex justify-content-center align-items-center">
-    <div class="categories-listing container h-75 col-md-8  col-sm-12">
+    <div class="overflow container h-75 col-md-8  col-sm-12">
       <h1>Categorias</h1>
       <a name="btnRegiterNewCategory" id="btnRegiterNewCategory" class="btn btn-success" href="/admin/categorias/novo" role="button">Criar nova categoria</a>
       <table class="table table-bordered mt-2">
