--- a/views/admin/articles/new.ejs
+++ b/views/admin/articles/new.ejs
@@ -9,7 +9,7 @@
           <h1>Criar artigo</h1>
         </div>
         <div class="card-body">
-          <form action="" method="post">
+          <form action="/admin/artigos/salvar" method="post">
             <div class="form-group">
               <label for="articleTitleRegister">Defina o título do artigo: </label>
               <input type="text"
