--- a/views/admin/articles/index.ejs
+++ b/views/admin/articles/index.ejs
@@ -22,7 +22,7 @@
             <td scope="row" class="d-none d-md-block"><%= article.id %></td>
             <td><%= article.title %></td>
             <td><%= article.slug %></td>
-            <td><%= article.categoryId %></td>
+            <td><%= article.category.title %></td>
             <td class="d-flex justify-content-around align-items-start">
               <a name="btnArticleUpdate" id="btnArticleUpdate" class="btn btn-warning" href="/admin/artigos/editar/<%= article.id %>" role="button"><i class="fa fa-pencil text-light" aria-hidden="true"></i></a>
               <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#confirmationDeleteArticle<%= article.id %>">
