feat: add delete article action

--- a/views/admin/articles/index.ejs
+++ b/views/admin/articles/index.ejs
@@ -48,7 +48,7 @@
                       <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
                       <form class="form-inline" action="/admin/artigos/deletar" method="post">
                         <div class="form-group">
-                          <input type="hidden" name="categoryId" value="<%= article.id %>">
+                          <input type="hidden" name="articleId" value="<%= article.id %>">
                           <button type="submit" class="btn btn-danger">Deletar</button>
                         </div>
                       </form>
