feat: first steps in article edition action

--- a/views/admin/articles/new.ejs
+++ b/views/admin/articles/new.ejs
@@ -23,7 +23,7 @@
               <label for="articleCategoryRegister">Selecione uma categoria</label>
               <select class="form-control" name="articleCategoryRegister" id="articleCategoryRegister">
                 <% categories.forEach(category => { %>
-                  <option value="<%= category.id %>"><%= category.title %></option>
+                  <option value="<% category.id %>"><%= category.title %></option>
                 <% }); %>
               </select>
             </div>
