--- a/views/components/home.ejs
+++ b/views/components/home.ejs
@@ -1,1 +1,28 @@
-<h1>Hello world</h1>
+<div class="homepage container h-75 col-md-8 col-sm-12">
+  <div class="jumbotron jumbotron-fluid bg-light border rounded">
+    <div class="container">
+      <h1 class="display-3">Seja bem-vindo(a)</h1>
+      <p class="lead">Nosso blog é dedicados a todos os amantes e simpatizantes da tecnologia da informação <i class="fa fa-hand-peace-o" aria-hidden="true"></i></p>
+      <hr class="my-2">
+      <p class="text-justify text-muted">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae, delectus accusamus natus saepe voluptatibus nulla deserunt, mollitia quaerat molestiae vitae recusandae distinctio aperiam veniam non quod dolorum aliquid debitis repudiandae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, fugiat adipisci, quis sunt sit numquam laboriosam recusandae voluptates porro cupiditate nihil atque molestias! Ad, voluptatibus sequi itaque dolore quo deleniti.</p>
+      <p class="lead">
+        <a class="btn btn-success btn-lg" href="/cadastro" role="button">Começar meu registro <i class="fa fa-rocket" aria-hidden="true"></i></a>
+      </p>
+    </div>
+  </div>
+  <h3>Últimos artigos publicados</h3>
+  <hr>
+  <% articles.forEach(article => { %>
+    <div class="card mb-3">
+      <div class="card-header">
+        <h4 class="card-title m-1"><%= article.title %></h4>
+      </div>
+      <div class="card-body d-flex justify-content-between align-items-center">
+        <a href="/artigos/<%= article.id %>" class="card-link">Ler conteúdo completo</a>
+        <button class="btn">
+          Categoria: <a href="/admin/categorias" class="badge badge-primary"><%= article.category.title %></a>
+        </button>
+      </div>
+    </div>
+  <% }); %>
+</div>
